# meme-watcher

./: .dockerignore  .gitignore  Caddyfile  Caddyfile.prod  LICENSE  README.md  mprocs.yaml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  rustfmt.toml  typeshare.toml
backend/.cargo/: config
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  setup.rs
backend/crates/api/src/fairings/: add_request_id.rs  mod.rs  request_logger.rs
backend/crates/api/src/helpers/: mod.rs  order.rs  pagination.rs  range_responder.rs
backend/crates/api/src/routes/: mod.rs
backend/crates/api/src/routes/file/: mod.rs  serve.rs
backend/crates/api/src/routes/page_data/: index.rs  mod.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs
backend/crates/entity/: Cargo.toml
backend/crates/entity/src/entities/: file_data.rs  file_metadata.rs  files.rs  files_tags.rs  mod.rs  prelude.rs  tags.rs
backend/crates/ffmpeg/: Cargo.toml
backend/crates/ffmpeg/src/: ffprobe.rs  lib.rs
backend/crates/file-watcher/: Cargo.toml
backend/crates/file-watcher/src/: blurhash.rs  file.rs  file_metadata.rs  index.rs  lib.rs  media_dimensions.rs  scan.rs  thumb.rs
backend/crates/file-watcher/src/helpers/: date.rs  file.rs
backend/crates/logger/: Cargo.toml
backend/crates/logger/src/: lib.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231121_171813_merge_file_metadata.rs
backend/src/: main.rs
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: env.mjs
frontend/src/app/: layout.tsx
frontend/src/app/(default)/: layout.tsx  page.client.tsx  page.tsx
frontend/src/assets/font/: index.ts
frontend/src/assets/font/CommitMono/: custom-settings.json  license.txt
frontend/src/assets/styles/: globals.css  tailwind.css
frontend/src/lib/page/: metadata.ts
frontend/src/lib/server/: api.ts  baseUrl.ts
frontend/src/lib/util/: class.ts
frontend/src/types/: rust.api.d.ts  rust.api.ts  util.ts
