[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
serde = { version = "1.0.192", features = ["derive", "alloc"] }
serde_json = { version = "1.0.108", features = ["alloc"] }
config = { path = "../config" }
logger = { path = "../logger" }
sea-orm = { version = "0.12.4", features = [
    "macros",
    "sqlx-all",
    "runtime-tokio-rustls",
    "debug-print",
    "sea-orm-internal",
] }
ulid = "1.1.0"
tracing = "0.1.40"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["alloc", "serde"] }
entity = { path = "../entity" }
futures = { version = "0.3.29", features = ["thread-pool"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
migration = { path = "../migration" }
sqlx = { version = "0.7.2", features = ["sqlx-sqlite"] }
typeshare = "1.0.1"
http-range-header = "0.4.0"
file-watcher = { version = "0.1.0", path = "../file-watcher" }

[lints]
workspace = true
