[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive", "env"] }
lazy_static = "1.4.0"
resolve-path = "0.1.0"
serde = { version = "1.0.192", features = ["derive", "alloc"] }
which = "5.0.0"

[lints]
workspace = true
