[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["alloc", "serde"] }
sea-orm = "0.12.3"
serde = { version = "1.0.188", features = ["derive", "alloc"] }
tsync = "2.0.1"
typeshare = "1.0.0"

[lints]
workspace = true