[package]
name = "ffmpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.1.0", path = "../config" }
logger = { version = "0.1.0", path = "../logger" }
serde = { version = "1.0.192", features = ["derive", "alloc"] }
serde_json = { version = "1.0.108", features = ["alloc"] }
tokio = { version = "1.34.0", features = ["process"] }
tracing = "0.1.40"

[lints]
workspace = true
