[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
lazy_static = "1.4.0"

[dependencies.sea-orm-migration]
version = "0.12.0"
features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "with-chrono", "with-json", "with-uuid"]

[lints]
workspace = true
